--- a/HackAura25/style.css
+++ b/HackAura25/style.css
@@ -74,14 +74,27 @@ h1 {
 .menu{
   text-align: left;
   text-decoration: none;
+  
 }
 .sidebar-menu{
   height: 100vh;
-  width:300px;
-  background-color: rgba(0,0,0,0.5);
+  width:160px;
+  background-color: rgb(6, 13, 77);
   text-decoration: none;
+  border-radius:10px ;
 }
 #user{
   font-size: 30px;
   padding: 10px 40px;
+  color: white;
+}
+.list a{
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+}
+div .cal{
+  height: auto;
+  width: auto;
+  background-color: yellow;
 }
