--- a/HackAura25/style.css
+++ b/HackAura25/style.css
@@ -62,7 +62,7 @@ h1 {
   display: inline-block;
   padding-inline-start: 10px;
   padding-block-start: 10px;
-  padding-top: 20px;
+  padding-top: 10px;
 }
 #ass{
   text-align: left;
@@ -81,7 +81,7 @@ h1 {
   width:160px;
   background-color: rgb(6, 13, 77);
   text-decoration: none;
-  border-radius:10px ;
+  border-radius:10px;
 }
 #user{
   font-size: 30px;
@@ -93,8 +93,15 @@ h1 {
   color: white;
   font-size: 20px;
 }
-div .cal{
-  height: auto;
-  width: auto;
-  background-color: yellow;
+.container{
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+.cal{
+  height: 100vh;
+  width: 100%;
+  background-image: url(Plan.jpeg);
+  background-size:cover;
+  border: 2px solid black;
 }
